Fixed spacing on html markup and updated class names for article section in css

--- a/style.css
+++ b/style.css
@@ -244,12 +244,12 @@ button {
     margin-top: 4em;
 }
 
-.article {
+article {
     display: flex;
     justify-content: center;
 }
 
-.article + .article {
+article + article {
     margin-top: 3em;
     margin-bottom: 3em;
     padding-top: 1em;
@@ -402,7 +402,7 @@ button {
         margin-top: 0;
     }
 
-    .article + .article {
+    article + article {
         margin: 0;
         padding: 0;
     }
